--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Version 3.0.3
+- Added auto login
+- Added MP3 Fallback
+- Added auto update
+- Fixed login error not being triggered sometimes
 Version 3.0.2
 - Fixed crashes when songs could not be downloaded
 - Added bpm tag
