--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 3.0.5
+- Changed repo from github to gitlab
+- Fixed Login error for Deezer Family Accounts
+- Fixed composer tag
 Version 3.0.4
 - Fixed download crashes
 - Fixed failed tracks when downloading some albums and playlists
