--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+Version 3.0.9
+- Added synced and unsynced lyrics, album name option and number playlist by album option
+- Added pad track number(01,02)
+- Fixed dots at end of folders when album/arist folder is enabled
+- Fixed ENOENT when folder does not exists
+- Fixed alternative track downloading, it will only download it if it will fail to download the non alternative one
+- Changed license to GNU GPL 3.0
+- Changed all spaces in the JS code to tabs
+- Improved update notifier, it will redirect you to the download page
 Version 3.0.8
 - Fixed initializing stuck
 - Removed Diacritics remover
