--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+Version 3.2.0
+- Add my playlists tab with the user public playlists
 Version 3.1.0
 - Fixed Download Freeze
 - Improved logs
@@ -91,7 +93,7 @@ Version 3.0.4
 - Improved tags
 - Changed album cover dir to the albums folder
 - Changed settings style
-- Fixed login crash when there is no connection 
+- Fixed login crash when there is no connection
 Version 3.0.3
 - Added auto login
 - Added MP3 Fallback
@@ -165,7 +167,7 @@ Version 2.1.2
 Version 2.1.1
 - Added context menu
 - Corrected some spelling mistakes
-- Fixed crash when searching with special characters like Æ, Ø and Å.
+- Fixed crash when searching with special characters like ï¿½, ï¿½ and ï¿½.
 
 Version 2.1.0
 - Updated all libraries to their latest version (this should fix issues with newer node versions)
