build: update version

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+Version 3.3.0
+- Add playlist converter by soundiiz
 Version 3.2.0
 - Add my playlists tab with the user public playlists
 Version 3.1.0
