fix: update user id regex and disable invalid token
Close #1

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 4.0.1
+- Update regex to get user id
+- Disable invalid API token
+
 Version 4.0.0
 - Change project name to DeezLoader Remaster
 - Refactor css and js code and added cdns
